Fixes table collapse

--- a/app/serviceDesk/page.module.css
+++ b/app/serviceDesk/page.module.css
@@ -28,14 +28,13 @@
   justify-content: center;
   align-items: center;
   margin: 0 auto;
-
 }
 
 .incidentTable {
   text-align: center;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   width: 100%;
-  height: 100%;
+  height: 40em;
   margin: 0 auto;
   display: block;
 }
